consistent wording: n-piece

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -3,7 +3,7 @@
 
   {% if piece_count >= 7 and not unknown_moves %}
     <div class="warning" role="alert">
-      Careful, this is based on <strong>experimental</strong> 7 piece tables thankfully <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">generated and shared by Bojun Guo</a>.
+      Careful, this is based on <strong>experimental</strong> 7-piece tables thankfully <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">generated and shared by Bojun Guo</a>.
     </div>
   {% endif %}
 
@@ -145,10 +145,10 @@
       <abbr title="depth-to-mate">DTM</abbr> does not account for the
       fifty-move drawing rule: Sometimes it is better to reset the fifty-move
       counter than to go for the shortest mate.</p>
-    <p>6 piece tables were <a href="http://www.talkchess.com/forum3/viewtopic.php?t=47681">released</a> by Ronald de Man in April 2013, including
+    <p>6-piece tables were <a href="http://www.talkchess.com/forum3/viewtopic.php?t=47681">released</a> by Ronald de Man in April 2013, including
       <a href="https://github.com/syzygy1/tb">probing code and the generator</a>.</p>
-    <p>In 2018 Bojun Guo <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">started</a> generating 7 piece tables.</p>
-    <p>The 7 piece tablebases will contain 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 20 Terabytes.</p>
+    <p>In 2018 Bojun Guo <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">started</a> generating 7-piece tables.</p>
+    <p>The 7-piece tablebases will contain 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 20 Terabytes.</p>
 
     <h3>Selected positions</h3>
     <ul>
@@ -191,9 +191,9 @@
 
     <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
     <ul>
-      <li><a href="http://tablebase.sesse.net/syzygy/">tablebase.sesse.net</a> (fastest mirror, EU, not all 7 piece tables)</li>
+      <li><a href="http://tablebase.sesse.net/syzygy/">tablebase.sesse.net</a> (fastest mirror, EU, not all 7-piece tables)</li>
       <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (complete mirror, EU)</li>
-      <li><a href="ftp://112.73.74.24/pub/syzygy">Bojun Guo</a> (ftp, China, original source of 7 piece tables)</li>
+      <li><a href="ftp://112.73.74.24/pub/syzygy">Bojun Guo</a> (ftp, China, original source of 7-piece tables)</li>
     </ul>
   </section>
 
