--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,5 +41,7 @@
     {% block forkme %}
       <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.info"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 2;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
     {% endblock %}
+
+    {% block scripts %}{% endblock %}
   </body>
 </html>
