--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
     <form id="form-set-fen" action="/" method="get">
       <div class="input-group">
-        <input id="fen" type="text" name="fen" value="{{ fen_input }}" class="form-control" aria-label="FEN" placeholder="{{ DEFAULT_FEN }}">
+        <input id="fen" type="text" name="fen" value="{{ fen_input }}" class="form-control" aria-label="FEN" placeholder="{{ DEFAULT_FEN }}" autofocus>
         <span class="input-group-btn">
           <input type="submit" class="btn btn-default" value="Set FEN">
         </span>
