--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -121,7 +121,7 @@
 
       <a href="/stats/{{ material }}.json" aria-label="Machine readable statistics for {{ material }}" title="Machine readable statistics for {{ material }}">
         <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
-        {{ material }}.json
+        {{ material }}.json <a href="/stats">(?)</a>
       </a>
 
     </section>
