--- a/templates/stats.html
+++ b/templates/stats.html
@@ -3,7 +3,7 @@
 {% block title %}Endgame statistics – Syzygy endgame tablebases{% endblock %}
 
 {% block leftside %}
-  <h1>Endgame statistics</h1>
+  <h1>Machine readable endgame statistics</h1>
 
   <nav>
     <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
