update list of dependencies

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -47,18 +47,18 @@
   <section id="thanks">
     <h2>Software licenses</h2>
 
-    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the AGPLv3</a>. It also uses the following software:</p>
+    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the AGPL-3.0+</a>. It also uses the following software:</p>
 
     <ul>
-      <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPLv3</a>)</li>
-      <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPLv3</a>)</li>
+      <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPL-3.0+</a>)</li>
+      <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
       <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
       <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
       <li><a href="http://jinja.pocoo.org/">Jinja</a> (<a href="https://github.com/mitsuhiko/jinja2/blob/master/LICENSE">BSD</a>)</li>
       <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
       <li><a href="http://getbootstrap.com/">Bootstrap</a> (<a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>)</li>
-      <li><a href="https://jquery.com/">jQuery</a> (<a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">MIT</a>)</li>
+      <li><a href="http://zeptojs.com/">zepto.js</a> (<a href="https://github.com/madrobby/zepto/blob/master/MIT-LICENSE">MIT</a>)</li>
     </ul>
   </section>
 {% endblock %}
