--- a/templates/stats.html
+++ b/templates/stats.html
@@ -89,7 +89,8 @@
     </p>
     <p>
       Histograms <code>win_hist</code> and <code>loss_hist</code>: Number of
-      positions winning/losing in 0, 1, 2 plies.
+      positions winning/losing in 0, 1, 2, ... plies until the next pawn move
+      or capture.
     </p>
     <p>
       Number of positions with <code>wdl</code>.
