--- a/templates/endgames.html
+++ b/templates/endgames.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Endgame statistics – Syzygy endgame tablebases{% endblock %}
+{% block title %}Endgames – Syzygy endgame tablebases{% endblock %}
 
 {% block leftside %}
   <h1>Endgames</h1>
