--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Endgame statistics – Syzygy endgame tablebases{% endblock %}
+{% block title %}Machine readable endgame statistics – Syzygy endgame tablebases{% endblock %}
 
 {% block leftside %}
   <h1>Machine readable endgame statistics</h1>
