update total size

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -148,7 +148,7 @@
     <p>6-piece tables were <a href="http://www.talkchess.com/forum3/viewtopic.php?t=47681">released</a> by Ronald de Man in April 2013, including
       <a href="https://github.com/syzygy1/tb">probing code and the generator</a>.</p>
     <p>In 2018 Bojun Guo <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">started</a> generating 7-piece tables.</p>
-    <p>The 7-piece tablebases will contain 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 20 Terabytes.</p>
+    <p>The 7-piece tablebases will contain 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 18 Terabytes.</p>
 
     <h3>Selected positions</h3>
     <ul>
@@ -183,9 +183,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>3-5</td><td>379&nbsp;M</td><td>561&nbsp;M</td><td>939&nbsp;M</td></tr>
-        <tr><td>6</td><td>68&nbsp;G</td><td>82&nbsp;G</td><td>150&nbsp;G</td></tr>
-        <tr><td>7</td><td colspan="3">about 20&nbsp;T</td></tr>
+        <tr><td>3-5</td><td>{{ kib(387124) }}</td><td>{{ kib(574384) }}</td><td>{{ kib(961508) }}</td></tr>
+        <tr><td>6</td><td>{{ kib(71127940) }}</td><td>{{ kib(85344200) }}</td><td>{{ kib(156472140) }}</td></tr>
+        <tr><td>7</td><td>{{ kib(9098389892) }}</td><td>{{ kib(8859535148) }}</td><td>{{ kib(17957925040) }}</td></tr>
       </tbody>
     </table>
 
