--- a/static/css/chessground.css
+++ b/static/css/chessground.css
@@ -31,9 +31,11 @@
   left: 0;
   width: 12.5%;
   height: 12.5%;
+  pointer-events: none;
 }
 .cg-board square.move-dest {
   background: radial-gradient(rgba(20, 85, 30, 0.5) 22%, #208530 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
+  pointer-events: auto;
 }
 .cg-board square.premove-dest {
   background: radial-gradient(rgba(20, 30, 85, 0.5) 22%, #203085 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
@@ -44,9 +46,11 @@
 .cg-board square.oc.premove-dest {
   background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 30, 85, 0.2) 80%);
 }
-.cg-board .cg-square.move-dest.drag-over,
-.cg-board .cg-square.premove-dest.drag-over {
-  box-shadow: inset 0 0 10px 2px rgba(216, 85, 0, 0.9);
+.cg-board square.move-dest:hover {
+  background: rgba(20, 85, 30, 0.3);
+}
+.cg-board square.premove-dest:hover {
+  background: rgba(20, 30, 85, 0.2);
 }
 .cg-board square.last-move {
   will-change: transform;
@@ -70,6 +74,7 @@
   background-size: cover;
   z-index: 2;
   will-change: transform;
+  pointer-events: none;
 }
 .cg-board piece.dragging {
   cursor: move;
