put ftp.chessdb.cn also in link text

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -186,7 +186,7 @@
     <ul>
       <li><a href="http://tablebase.sesse.net/syzygy/">tablebase.sesse.net</a> (fastest mirror, EU, not all 7-piece tables)</li>
       <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (complete mirror, EU)</li>
-      <li><a href="ftp://ftp.chessdb.cn/pub/syzygy">Bojun Guo</a> (ftp, China, original source of 7-piece tables)</li>
+      <li><a href="ftp://ftp.chessdb.cn/pub/syzygy">ftp.chessdb.cn</a> (ftp, China, original source of 7-piece tables)</li>
     </ul>
   </section>
 
