sesse now complete

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -184,8 +184,8 @@
 
     <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
     <ul>
-      <li><a href="http://tablebase.sesse.net/syzygy/">tablebase.sesse.net</a> (fastest mirror, EU, not all 7-piece tables)</li>
-      <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (complete mirror, EU)</li>
+      <li><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a> (fastest mirror, EU)</li>
+      <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (mirror, EU)</li>
       <li><a href="ftp://ftp.chessdb.cn/pub/syzygy">ftp.chessdb.cn</a> (ftp, China, original source of 7-piece tables)</li>
     </ul>
   </section>
