--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 
 {% block head %}
   <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
+  <meta property="og:image" content="https://backscattering.de/web-boardimage/board.png?fen={{ board_fen }}{% if check_square %}&check={{ check_square }}{% endif %}">
+  <meta property="twitter:image" content="https://backscattering.de/web-boardimage/board.png?fen={{ board_fen }}{% if check_square %}&check={{ check_square }}{% endif %}">
 {% endblock %}
 
 {% block scripts %}
