create a button for edit mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,6 +278,9 @@ footer > .inner {
 .glyphicon-stats:before {
   content: "\e185";
 }
+.glyphicon-move:before {
+  content: "\e068";
+}
 
 /* Form controls */
 
