--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,12 @@
           <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
         </a>
       </div>
+
+      <div class="btn-group">
+        <a id="btn-edit" class="btn btn-default" title="Edit mode">
+          <span class="glyphicon glyphicon-move" aria-hidden="true"></span>
+        </a>
+      </div>
     </div>
 
     <form id="form-set-fen" action="/" method="get">
