--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,9 @@
 
     <div id="board-toolbar" role="toolbar">
       <div class="btn-group">
-        <button id="btn-flip-board" type="button" class="btn btn-default" aria-label="Flip board" title="Flip board">
+        <a id="btn-flip-board" type="button" class="btn btn-default" aria-label="Flip board" title="Flip board">
           <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-        </button>
+        </a>
       </div>
 
       <div class="btn-group">
