explain edit mode

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="btn-group">
-        <a id="btn-edit" class="btn btn-default" title="Edit mode">
+        <a id="btn-edit" class="btn btn-default" title="Edit mode: Do not switch sides when playing moves">
           <span class="glyphicon glyphicon-move" aria-hidden="true"></span>
         </a>
       </div>
