--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -132,13 +132,14 @@
       i.e. they allow winning all won
       positions and bringing all drawn positions over the fifty-move line.<p>
     <p>The tables provide <abbr title="win-draw-loss">WDL</abbr> and
-      <abbr title="distance-to-zeroing (a capture or pawn move)">DTZ</abbr>
+      <abbr title="distance-to-zeroing (of the fifty-move counter by a capture or pawn move)">DTZ</abbr>
       information. Forcing captures or pawn moves while keeping a win in hand
       ensures that progress is beeing made.</p>
-    <p>DTZ optimal play is unlike the shortest way to mate, because
-      <abbr title="depth-to-mate">DTM</abbr> does not account for the
-      fifty-move drawing rule: Sometimes it is better to reset the fifty-move
-      counter than to go for the shortest mate.</p>
+    <p>DTZ optimal play is not always the shortest way to mate
+      (<abbr title="depth-to-mate">DTM</abbr>) and can even look unintuitive:
+      For example sometimes pieces can be sacrificed to reset the fifty-move
+      counter as soon as possible. However unlike DTM it achieves the best
+      possible result even with the fifty-move rule.</p>
     <p>6-piece tables were <a href="http://www.talkchess.com/forum3/viewtopic.php?t=47681">released</a> by Ronald de Man in April 2013, including
       <a href="https://github.com/syzygy1/tb">probing code and the generator</a>.</p>
     <p>From May to August 2018 Bojun Guo <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">generated</a> 7-piece tables. The 7-piece tablebase contains 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 18 Terabytes.</p>
@@ -182,7 +183,7 @@
       </tbody>
     </table>
 
-    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
+    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires considerable computational resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
     <ul>
       <li><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a> (fastest mirror, EU)</li>
       <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (mirror, EU)</li>
