logs are kept for 48 hours

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -7,7 +7,7 @@
 
   <p>The tablebase lookup is provided on a best-effort basis, without guarantees
     of correctness or availability. Feedback or questions are welcome.</p>
-  <p>There are standard server logs.</p>
+  <p>There are standard server logs kept no longer than 48 hours.</p>
 
   <nav>
     <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
