try to create librejs compatible weblabels

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -47,13 +47,30 @@
   <section id="thanks">
     <h2>Software licenses</h2>
 
-    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the AGPL-3.0+</a>. It also uses the following software:</p>
+    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the AGPL-3.0+</a>.</p>
 
+    <table id="jslicense-labels1">
+      <thead>
+        <tr>
+          <th>Script</th>
+          <th>License</th>
+          <th>Source</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a href="{{ asset_url("js/client.min.js") }}">client.min.js</a></td>
+          <td><a href="https://www.gnu.org/licenses/agpl-3.0.en.html">AGPL-3.0+</a></td>
+          <td><a href="https://github.com/niklasf/syzygy-tables.info/blob/master/src/client.js">client.js</a></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <p>It also uses the following software:</p>
     <ul>
       <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
-      <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
       <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
       <li><a href="http://jinja.pocoo.org/">Jinja</a> (<a href="https://github.com/mitsuhiko/jinja2/blob/master/LICENSE">BSD</a>)</li>
       <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
