add #explorer to lichess links

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -80,7 +80,7 @@
       <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
       {{ material }}.pgn
     </a>
-    <a id="lichess-analysis" href="https://lichess.org/analysis/standard/{{ fen|replace(" ", "_") }}">
+    <a id="lichess-analysis" href="https://lichess.org/analysis/standard/{{ fen|replace(" ", "_") }}#explorer">
       <span class="glyphicon glyphicon-knight" aria-hidden="true"></span>
       lichess.org
     </a>
