add font-display block on icon font

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -246,6 +246,7 @@ footer > .inner {
   font-family: 'Glyphicons Halflings';
   src: url('/static/fonts/glyphicons-halflings-regular.eot');
   src: url('/static/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/static/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('/static/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/static/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/static/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  font-display: block;
 }
 
 .glyphicon {
