make edit mode more visible (closes #7)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -280,11 +280,11 @@ footer > .inner {
 .glyphicon-stats:before {
   content: "\e185";
 }
-.glyphicon-move:before {
-  content: "\e068";
-}
 .glyphicon-knight:before {
   content: "\e215";
+}
+.glyphicon-lock:before {
+  content: "\e033";
 }
 
 /* Form controls */
