add another link to list of longest endgames

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -150,7 +150,8 @@
 
     <h3>Selected positions</h3>
     <ul>
-      <li>Longest endgames:
+      <li>
+        <a href="/endgames">Longest endgames</a>:
         <a href="/?fen=8/8/8/8/8/8/2Rk4/1K6_b_-_-_0_1">3</a>,
         <a href="/?fen=8/8/8/6B1/8/8/4k3/1K5N_b_-_-_0_1">4</a>,
         <a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4_w_-_-_0_1">5</a>,
