--- a/templates/endgames.html
+++ b/templates/endgames.html
@@ -5,6 +5,15 @@
 {% block leftside %}
   <h1>Endgames</h1>
 
+  <p>These are the longest endgames (maximum DTZ) for each material configuration.</p>
+
+  <p>
+    <a href="/endgames.pgn">
+      <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+      endgames.pgn
+    </a> ({{ kib(4396) }})
+  </p>
+
   <nav>
     <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
   </nav>
