Fix typo in about section.

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -138,7 +138,7 @@
     <p>The tables provide <abbr title="win-draw-loss">WDL</abbr> and
       <abbr title="distance-to-zeroing (of the fifty-move counter by a capture or pawn move)">DTZ</abbr>
       information. Forcing captures or pawn moves while keeping a win in hand
-      ensures that progress is beeing made.</p>
+      ensures that progress is being made.</p>
     <p>DTZ optimal play is not always the shortest way to mate
       (<abbr title="depth-to-mate">DTM</abbr>) and can even look unintuitive:
       For example sometimes pieces can be sacrificed to reset the fifty-move
