--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -133,7 +133,7 @@
     <h3>About</h3>
     <p>Syzygy tablebases allow perfect play with up to 7 pieces,
       both with and without the fifty-move drawing rule,
-      i.e. they allow winning all won
+      i.e., they allow winning all won
       positions and bringing all drawn positions over the fifty-move line.<p>
     <p>The tables provide <abbr title="win-draw-loss">WDL</abbr> and
       <abbr title="distance-to-zeroing (of the fifty-move counter by a capture or pawn move)">DTZ</abbr>
@@ -161,11 +161,6 @@
       <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8_b_-_-_0_1">Black escapes to a blessed loss with an underpromotion</a></li>
       <li><a href="/?fen=k7/2QR4/8/8/8/4N3/2r4Q/1K6_b_-_-_0_1">Black rook chasing king to force stalemate, without avail</a></li>
       <li><a href="/?fen=6B1/3B4/5R2/6q1/P7/1k6/8/3K4_b_-_-_0_1">656 half-moves before the winning side can safely move a pawn</a></li>
-      <li>Collection of <a href="http://ruszchessstudies.blogspot.com/2018/06/syzygy-endgame-explorer-see.html">mutual zugzwangs by Árpád Rusz</a>:
-        <a href="/?fen=K1k4n/6q1/8/B1N5/8/5B2/8/8_w_-_-_0_1">KBBNvKQN</a>,
-        <a href="/?fen=4N2k/8/5N2/1n5N/8/8/1K2n3/8_w_-_-_0_1">KNNNvKNN</a>,
-        <a href="/?fen=4k2r/8/1K1R4/8/2q5/Q4P2/8/8_w_-_-_0_1">KQRPvKQR</a>
-      </li>
     </ul>
   </section>
 
