--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="preload" href="/static/fonts/glyphicons-halflings-regular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/static/fonts/glyphicons-halflings-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="{{ asset_url("css/style.min.css") }}">
     {% block head %}{% endblock %}
     <title>{% block title %}Syzygy endgame tablebases{% endblock %}</title>
