--- a/templates/legal.html
+++ b/templates/legal.html
@@ -66,7 +66,7 @@
       </tbody>
     </table>
 
-    <p>It also uses the following software:</p>
+    <p>It also uses the following software/artwork:</p>
     <ul>
       <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPL-3.0+</a>)</li>
@@ -74,8 +74,9 @@
       <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
       <li><a href="http://jinja.pocoo.org/">Jinja</a> (<a href="https://github.com/mitsuhiko/jinja2/blob/master/LICENSE">BSD</a>)</li>
       <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
-      <li><a href="http://getbootstrap.com/">Bootstrap</a> (<a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>)</li>
       <li><a href="http://zeptojs.com/">zepto.js</a> (<a href="https://github.com/madrobby/zepto/blob/master/MIT-LICENSE">MIT</a>)</li>
+      <li><a href="https://fontawesome.com/">Font Awesome</a> (<a href="https://fontawesome.com/license/free">SIL</a>)
+      <li><a href="http://getbootstrap.com/">Bootstrap</a> (<a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>)</li>
     </ul>
   </section>
 {% endblock %}
