--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,52 +240,36 @@ footer > .inner {
   background-size: cover;
 }
 
-/* Glyphicons */
+/* Icon font */
 
 @font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('/static/fonts/glyphicons-halflings-regular.eot');
-  src: url('/static/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/static/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('/static/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/static/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/static/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  font-family: 'fontello';
+  src: url('/static/fonts/fontello.eot');
+  src: url('/static/fonts/fontello.eot?#iefix') format('embedded-opentype'), url('/static/fonts/fontello.woff2') format('woff2'), url('/static/fonts/fontello.woff') format('woff'), url('/static/fonts/fontello.ttf') format('truetype'), url('/static/fonts/fontello.svg#fontello') format('svg');
   font-display: block;
 }
 
-.glyphicon {
+.icon {
+  speak: none;
   position: relative;
-  top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: 'fontello';
   font-style: normal;
-  font-weight: 400;
-  line-height: 1;
+  font-weight: normal;
+  line-height: 1em;
+  width: 1em;
 }
 
-.glyphicon-refresh:before {
-  content: "\e031";
-}
-.glyphicon-erase:before {
-  content: "\e221";
-}
-.glyphicon-adjust:before {
-  content: "\e063";
-}
-.glyphicon-resize-horizontal:before {
-  content: "\e120";
-}
-.glyphicon-resize-vertical:before {
-  content: "\e119";
-}
-.glyphicon-download-alt:before {
-  content: "\e025";
-}
-.glyphicon-stats:before {
-  content: "\e185";
-}
-.glyphicon-knight:before {
-  content: "\e215";
-}
-.glyphicon-lock:before {
-  content: "\e033";
-}
+.icon-rotate:before { content: '\e800'; }
+.icon-black-white:before { content: '\e801'; }
+.icon-horizontal:before { content: '\e802'; }
+.icon-vertical:before { content: '\e803'; }
+.icon-download:before { content: '\e804'; }
+.icon-stats:before { content: '\e805'; }
+.icon-lock:before { content: '\e806'; }
+.icon-lock-open:before { content: '\f13e'; }
+.icon-external:before { content: '\f08e'; }
+.icon-eraser:before { content: '\f12d'; }
 
 /* Form controls */
 
