--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -77,11 +77,11 @@
 
   {% if not illegal %}
     <a id="pgn-download" href="/syzygy-vs-syzygy/{{ material }}.pgn?fen={{ fen|replace(" ", "_") }}" aria-label="Download DTZ mainline" title="Download DTZ mainline">
-      <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+      <span class="icon icon-download" aria-hidden="true"></span>
       {{ material }}.pgn
     </a>
     <a id="lichess-analysis" href="https://lichess.org/analysis/standard/{{ fen|replace(" ", "_") }}#explorer">
-      <span class="glyphicon glyphicon-knight" aria-hidden="true"></span>
+      <span class="icon icon-external" aria-hidden="true"></span>
       lichess.org
     </a>
   {% endif %}
@@ -118,7 +118,7 @@
       </div>
 
       <a href="/stats/{{ material }}.json" aria-label="Machine readable statistics for {{ material }}" title="Machine readable statistics for {{ material }}">
-        <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
+        <span class="icon icon-stats" aria-hidden="true"></span>
         {{ material }}.json <a href="/stats">(?)</a>
       </a>
 
