--- a/templates/endgames.html
+++ b/templates/endgames.html
@@ -9,7 +9,7 @@
 
   <p>
     <a href="/endgames.pgn">
-      <span class="icon icon-download" aria-hidden="true"></span>
+      <span class="icon icon-download"></span>
       endgames.pgn
     </a> ({{ kib(4396) }})
   </p>
