--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
     <div class="btn-group">
       <a id="btn-edit" class="btn btn-default" title="Edit mode: Do not switch sides when playing moves">
-        <span class="icon icon-lock-open" aria-hidden="true"></span>
+        <span class="icon icon-lock-open"></span>
       </a>
     </div>
 
@@ -50,25 +50,25 @@
     <div id="board-toolbar" role="toolbar">
       <div class="btn-group">
         <a id="btn-flip-board" type="button" class="btn btn-default" aria-label="Flip board" title="Flip board">
-          <span class="icon icon-rotate" aria-hidden="true"></span>
+          <span class="icon icon-rotate"></span>
         </a>
       </div>
 
       <div class="btn-group">
           <a id="btn-clear-board" href="/?fen={{ clear_fen|replace(" ", "_") }}" class="btn btn-default" aria-label="Clear board" title="Clear board">
-          <span class="icon icon-eraser" aria-hidden="true"></span>
+          <span class="icon icon-eraser"></span>
         </a>
       </div>
 
       <div class="btn-group">
         <a id="btn-swap-colors" href="/?fen={{ swapped_fen|replace(" ", "_") }}" class="btn btn-default" title="Swap colors">
-          <span class="icon icon-black-white" aria-hidden="true"></span>
+          <span class="icon icon-black-white"></span>
         </a>
         <a id="btn-mirror-horizontal" href="/?fen={{ horizontal_fen|replace(" ", "_") }}" class="btn btn-default" title="Mirror horizontally">
-          <span class="icon icon-horizontal" aria-hidden="true"></span>
+          <span class="icon icon-horizontal"></span>
         </a>
         <a id="btn-mirror-vertical" href="/?fen={{ vertical_fen|replace(" ", "_") }}" class="btn btn-default" title="Mirror vertically">
-          <span class="icon icon-vertical" aria-hidden="true"></span>
+          <span class="icon icon-vertical"></span>
         </a>
       </div>
     </div>
