--- a/static/css/style.css
+++ b/static/css/style.css
@@ -457,10 +457,6 @@ pre code {
   background-position: center bottom;
 }
 
-.fork-me {
-  display: none;
-}
-
 /* Two columns */
 
 @media(min-width: 680px) {
@@ -491,10 +487,6 @@ pre code {
     bottom: 40px;
     right: 55%;
   }
-
-  .fork-me {
-    display: initial;
-  }
 }
 
 /* Two columns, but limited height */
@@ -517,7 +509,7 @@ pre code {
   }
 }
 @media(min-width: 680px) and (max-height: 650px) {
-  h1.main, .fork-me {
+  h1.main {
     display: none;
   }
   #side-to-move {
@@ -525,7 +517,7 @@ pre code {
   }
 }
 @media(min-width: 680px) and (max-height: 560px) {
-  h1.main, .fork-me, #board-toolbar {
+  h1.main, #board-toolbar {
     display: none;
   }
 }
