--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,7 +512,7 @@ pre code {
   h1.main {
     display: none;
   }
-  #side-to-move {
+  #side-to-move-toolbar {
     margin-top: 10px;
   }
 }
@@ -522,7 +522,7 @@ pre code {
   }
 }
 @media(min-width: 680px) and (max-height: 400px) {
-  #side-to-move, #form-set-fen, .spare {
+  #side-to-move-toolbar, #form-set-fen, .spare {
     display: none;
   }
   #board {
