--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   overflow-y: scroll;
   overflow-x: hidden;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: Arial,sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
